Bug 356256 - [Krita animation beta] Copying frame offsets the image to original position
Summary: [Krita animation beta] Copying frame offsets the image to original position
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: unspecified
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-03 18:33 UTC by Bhupen
Modified: 2015-12-14 15:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bhupen 2015-12-03 18:33:36 UTC
Copying frame offsets the image to original position.
If a drawing has been moved using Move tool, it then goes back to the original location in the new frame when copied. This is very annoying/time consuming as you have to manually drag the drawing again to position is correctly.
To understand the issue please try the steps to reproduce.

Reproducible: Always

Steps to Reproduce:
1. Create a drawing with a new frame.
2. Move the drawing using the Move tool.
3. Duplicate the frame using copy frame or drag-drop

Actual Results:  
The drawing in the new frame moves to the original location.

Expected Results:  
The drawing should retain the location of the frame it is copied from.
Comment 1 Dmitry Kazakov 2015-12-14 15:27:44 UTC
Git commit bc16a275413791dae90466a22c3cebae44ee81c9 by Dmitry Kazakov.
Committed on 14/12/2015 at 15:27.
Pushed by dkazakov into branch 'krita-animation-pentikainen'.

Fix initialization of the offset of the frame when it is duplicated

M  +4    -2    krita/image/kis_paint_device.cc

http://commits.kde.org/calligra/bc16a275413791dae90466a22c3cebae44ee81c9
Comment 2 Dmitry Kazakov 2015-12-14 15:32:49 UTC
Git commit da7dbfc1f8eacd4b8075251ee245e287af3551ec by Dmitry Kazakov.
Committed on 14/12/2015 at 15:28.
Pushed by dkazakov into branch 'master'.

Fix initialization of the offset of the frame when it is duplicated

M  +4    -2    krita/image/kis_paint_device.cc

http://commits.kde.org/krita/da7dbfc1f8eacd4b8075251ee245e287af3551ec