Fix initialization of the offset of the frame when it is duplicated

BUG:356256